--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ html, body, #root {
 }
 
 .PlayerContainer {
+    position: absolute;
     width: 300px;
     height: 500px;
     background: #ffccff;
@@ -26,7 +27,7 @@ html, body, #root {
 
 .PlayerDisplay {
     height: 380px;
-    background: #ffccdd;
+    background: #42496d;
 }
 
 .PlayerControls {
@@ -61,4 +62,49 @@ html, body, #root {
 .PlayIcon {
     width: 40px;
     margin: auto;
+}
+
+.PlayList {
+    background: #ffffff;
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+}
+
+.PlayListItem {
+    height: 60px;
+    padding: 10px;
+    padding-right: 40px;
+    position: relative;
+}
+
+.PlayListItem .SongName {
+    font-weight: bold;
+}
+
+.PlayListItem .ArtistName {
+    font-size: 14px;
+}
+
+.PlayListItem .Duration {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    font-size: 13px;
+}
+
+.PlayListItem .Separator {
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+    left: 0px;
+    border-bottom: 0.1px solid #cccccc; 
+}
+
+.TimeView .MoreIcon {
+    width: 16px;
+    vertical-align: middle;
+    margin-right: 5px;
 }
