--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,25 @@ html, body, #root {
 .PlayerDisplay {
     height: 380px;
     background: #42496d;
+    position: relative;
+}
+
+.PlayerDisplay .SongName {
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    bottom: 100px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+.PlayerDisplay .ArtistName {
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    bottom: 80px;
+    color: #ffffff;
 }
 
 .PlayerControls {
@@ -100,7 +119,7 @@ html, body, #root {
     width: 100%;
     bottom: 0px;
     left: 0px;
-    border-bottom: 0.1px solid #cccccc; 
+    border-bottom: 0.1px solid #cccccc;
 }
 
 .TimeView .MoreIcon {
