--- a/src/App.css
+++ b/src/App.css
@@ -8,26 +8,29 @@ html, body, #root {
     height: 100%;
 }
 
-.Main {
-    background: #CDD5F9;
+.MainContainer {
+    background: #d1f8ff;
     width: 100%;
     height: 100%;
+}
+
+.MainView {
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100%;
 }
 
 .PlayerContainer {
     position: absolute;
     width: 300px;
     height: 500px;
-    background: #42486e;
+    background: #008097;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .PlayerDisplay {
     height: 380px;
-    background: #42496d;
     position: relative;
 }
 
@@ -85,48 +88,6 @@ html, body, #root {
     width: 40px;
     margin: auto;
     cursor: pointer;
-}
-
-.PlayList {
-    background: #ffffff;
-    position: absolute;
-    top: 0px;
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
-}
-
-.PlayListItem {
-    height: 60px;
-    padding: 10px;
-    padding-right: 50px;
-    position: relative;
-}
-
-.PlayListItem .SongName {
-    font-weight: bold;
-    white-space: nowrap; 
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-.PlayListItem .ArtistName {
-    font-size: 14px;
-}
-
-.PlayListItem .Duration {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    font-size: 13px;
-}
-
-.PlayListItem .Separator {
-    position: absolute;
-    width: 100%;
-    bottom: 0px;
-    left: 0px;
-    border-bottom: 0.1px solid #cccccc;
 }
 
 .TimeView .MoreIcon {
