--- a/src/App.css
+++ b/src/App.css
@@ -40,18 +40,22 @@ html, body, #root {
     text-align: center;
     position: absolute;
     width: 100%;
-    bottom: 100px;
-    font-size: 20px;
+    bottom: 30px;
+    font-size: 16px;
     font-weight: bold;
     color: #ffffff;
-
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding: 0 10px 0 10px;
 }
 
 .PlayerDisplay .ArtistName {
     text-align: center;
     position: absolute;
     width: 100%;
-    bottom: 80px;
+    font-size: 14px;
+    bottom: 10px;
     color: #ffffff;
 }
 
